Add config option for ipv6-pd-enabled and pd-dhcp-driver.
Add charm config options for ipv6 prefix delegation.  Update unit tests and provide charm option descriptions.
closes-bug: #1908083

Change-Id: I5357fdce5b6bdaa80683e64ab5366f1b888affba

--- a/config.yaml
+++ b/config.yaml
@@ -791,3 +791,15 @@ options:
     description: |
       If True, on Ussuri or later, igmp snooping will be set on OVS and OVN
       control plane will learn about multicast traffic going on in the cluster.
+  enable-ipv6-pd:
+    type: boolean
+    default: False
+    description: If True, on Ussuri or later, enable IPv6 prefix delegation.
+  pd-dhcp-driver:
+    type: string
+    default:
+    description: |
+      On Ussuri or later, configure alternative IPv6 prefix delegation DHCP
+      driver if you are not using the default dibbler-based driver.
+      .
+      NOTE: Use only when "enable-ipv6-pd" is set to "True".
