--- a/templates/ussuri/neutron.conf
+++ b/templates/ussuri/neutron.conf
@@ -14,6 +14,11 @@ auth_strategy = keystone
 api_workers = {{ workers }}
 rpc_workers = {{ workers }}
 
+ipv6_pd_enabled = {{ ipv6_pd_enabled }}
+{% if pd_dhcp_driver -%}
+pd_dhcp_driver = {{ pd_dhcp_driver }}
+{% endif -%}
+
 {% if transport_url %}
 transport_url = {{ transport_url }}
 {% endif %}
